--- a/VueEP/appsettings.json
+++ b/VueEP/appsettings.json
@@ -6,7 +6,15 @@
     }
   },
   "ConnectionStrings": {
-    "MainDB":  ""
+    "MainDB": "Initial Catalog=MainDB;Server=DESKTOP-OJU30TP\\SQLEXPRESS;UID=sa;Pwd=manzana;"
+  },
+  "Token": {
+    "Issuer": "Dima",
+    "Audience": "Dima",
+    "Key": "bflllsyyyyyydhgddddddddduyd6"
+  },
+  "Password": {
+    "Iterations":  10
   }
 
 }
