--- a/VueEP/package.json
+++ b/VueEP/package.json
@@ -12,11 +12,11 @@
     "@aspnet/signalr-client": "^1.0.0-alpha1-final",
     "@websanova/vue-auth": "^2.18.3-beta",
     "jwt-decode": "^2.2.0",
-    "vue-authenticate": "^1.2.7",
-    "vue-material": "^0.7.5",
+    "vue": "^2.5.3",
+    "vue-authenticate": "^1.3.4",
+    "vue-material": "^0.8.1",
     "vue-resource": "^1.3.4",
     "vue-router": "^2.7.0",
-    "vuejs": "^1.0.29",
     "vuex": "^2.4.0"
   },
   "devDependencies": {
@@ -27,8 +27,8 @@
     "css-loader": "^0.28.7",
     "extract-text-webpack-plugin": "^3.0.0",
     "style-loader": "^0.18.2",
-    "vue-loader": "^13.0.4",
-    "vue-template-compiler": "^2.4.4",
+    "vue-loader": "^13.4.0",
+    "vue-template-compiler": "^2.5.3",
     "webpack": "^3.6.0"
   }
 }
