Запись лога в файл

--- a/VueEP/VueEP.csproj
+++ b/VueEP/VueEP.csproj
@@ -20,7 +20,8 @@
     <PackageReference Include="Microsoft.VisualStudio.Web.BrowserLink" Version="2.0.0" />
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="2.0.0" />
     <PackageReference Include="MongoDB.Driver" Version="2.4.4" />
-    <PackageReference Include="vue" Version="2.4.4" />
+    <PackageReference Include="Serilog.Extensions.Logging.File" Version="1.1.0" />
+    <PackageReference Include="vue" Version="2.5.2" />
   </ItemGroup>
 
   <ItemGroup>
