--- a/VueEP/appsettings.json
+++ b/VueEP/appsettings.json
@@ -9,6 +9,10 @@
   "ConnectionStrings": {
     "MainDB": "Initial Catalog=MainDB;Server=DESKTOP-OJU30TP\\SQLEXPRESS;UID=sa;Pwd=manzana;"
   },
+  "MongoDB": {
+    "Url": "mongodb://main_admin:manzana@localhost:27017",
+    "Database": "courses"
+  },
   "Token": {
     "Issuer": "Dima",
     "Audience": "Dima",
