--- a/VueEP/appsettings.json
+++ b/VueEP/appsettings.json
@@ -7,11 +7,11 @@
     }
   },
   "ConnectionStrings": {
-    "MainDB": "Initial Catalog=MainDB;Server=DESKTOP-OJU30TP\\SQLEXPRESS;UID=sa;Pwd=manzana;"
+    "MainDB": "Initial Catalog=ctest;Server=MSSQL\\MSSQL2008R2;UID=unKMS;Pwd=11;"
   },
   "MongoDB": {
     "Url": "mongodb://main_admin:manzana@localhost:27017",
-    "Database": "courses"
+    "Database": "dtest"
   },
   "Token": {
     "Issuer": "Dima",
